--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ footer{
 
 <header>
   <div class="container">
-    <div class="logo">BRAMOS TREE</div>
+    <div class="logo">BRAMOS TREE SOLUTION</div>
 
     <nav id="nav">
       <ul>
