Update bot message prompt for clarity

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ function handleFirstQuestion(msg){
 
   // NO
   if(m.includes("no")){
-    botMsg(`No problem at all! How can I help?<br>Try typing: <b>"What are your hours?"</b>`);
+    botMsg(`No problem at all! How can I help?<br>Try typing Something Like: <b>"What are your hours?"</b>`);
     firstInteraction = false;
     return true;
   }
