Update logo text in services.html

--- a/services.html
+++ b/services.html
@@ -144,7 +144,7 @@ footer{
 
 <header>
   <div class="container">
-    <div class="logo">BRAMOS TREE</div>
+    <div class="logo">BRAMOS TREE SOLUTION</div>
 
     <nav id="nav">
       <ul>
