Fix typo in service availability description

--- a/about.html
+++ b/about.html
@@ -171,4 +171,4 @@ footer{
   <div class="values">
     <div class="value-box">
       <h3>⚡ Fast Response</h3>
-      <p>Same-day and next-da
+      <p>Same-day and next day service</p>
